# docs/swagger.yaml
@@ -7,6 +7,26 @@ definitions:
       message:
         type: string
     type: object
+  models.AuthResponse:
+    properties:
+      email:
+        type: string
+      firstName:
+        type: string
+      lastName:
+        type: string
+    required:
+    - email
+    - firstName
+    - lastName
+    type: object
+  models.EditUserInfoResponse:
+    properties:
+      email:
+        type: string
+    required:
+    - email
+    type: object
   models.Folder:
     properties:
       folder_id:
@@ -19,8 +39,6 @@ definitions:
         type: integer
       name:
         type: string
-      user_id:
-        type: integer
     type: object
   models.FolderResponse:
     properties:
@@ -30,13 +48,11 @@ definitions:
         items:
           $ref: '#/definitions/models.MessageInfo'
         type: array
-      messages_count:
-        type: integer
-      messages_unseen:
-        type: integer
     type: object
   models.FoldersResponse:
     properties:
+      count:
+        type: integer
       folders:
         items:
           $ref: '#/definitions/models.Folder'
@@ -57,23 +73,22 @@ definitions:
     type: object
   models.FormSignUp:
     properties:
-      first_name:
+      firstName:
         type: string
-      last_name:
+      lastName:
         type: string
       login:
         type: string
       password:
         type: string
-      repeat_pw:
-        description: '?'
+      repeatPw:
         type: string
     required:
-    - first_name
-    - last_name
+    - firstName
+    - lastName
     - login
     - password
-    - repeat_pw
+    - repeatPw
     type: object
   models.MessageInfo:
     properties:
@@ -91,6 +106,8 @@ definitions:
         items:
           $ref: '#/definitions/models.UserInfo'
         type: array
+      reply_to:
+        $ref: '#/definitions/models.MessageInfo'
       seen:
         type: boolean
       text:
@@ -98,28 +115,23 @@ definitions:
       title:
         type: string
     type: object
-  models.SignInResponse:
+  models.MessageResponse:
     properties:
-      email:
-        type: string
-    required:
-    - email
-    type: object
-  models.SignUpResponse:
-    properties:
-      email:
-        type: string
-    required:
-    - email
+      message:
+        $ref: '#/definitions/models.MessageInfo'
     type: object
   models.UserInfo:
     properties:
       email:
         type: string
-      first_name:
+      firstName:
         type: string
-      last_name:
+      lastName:
         type: string
+    required:
+    - email
+    - firstName
+    - lastName
     type: object
 host: localhost:8001
 info:
@@ -146,15 +158,15 @@ paths:
           schema:
             $ref: '#/definitions/models.FolderResponse'
         "400":
-          description: failed to get folder messages
-          schema:
-            $ref: '#/definitions/errors.JSONError'
-        "401":
-          description: failed get session
+          description: invalid url address
           schema:
             $ref: '#/definitions/errors.JSONError'
         "404":
-          description: invalid url address
+          description: folder not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
           schema:
             $ref: '#/definitions/errors.JSONError'
       summary: GetFolderMessages
@@ -176,8 +188,8 @@ paths:
           description: failed to get user
           schema:
             $ref: '#/definitions/errors.JSONError'
-        "401":
-          description: failed get session
+        "500":
+          description: internal server error
           schema:
             $ref: '#/definitions/errors.JSONError'
       summary: GetFolders
@@ -193,13 +205,143 @@ paths:
       responses:
         "200":
           description: success logout
-        "401":
-          description: failed get session
+        "500":
+          description: internal server error
           schema:
             $ref: '#/definitions/errors.JSONError'
       summary: Logout
       tags:
-      - users
+      - auth
+  /message/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Message
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success get messages
+          schema:
+            $ref: '#/definitions/models.MessageResponse'
+        "400":
+          description: invalid url address
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: message not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: GetMessage
+      tags:
+      - messages
+  /message/{id}/read:
+    post:
+      consumes:
+      - application/json
+      description: Message
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success read message
+          schema:
+            $ref: '#/definitions/models.MessageResponse'
+        "400":
+          description: invalid url address
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: message not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: GetMessage
+      tags:
+      - messages
+  /message/{id}/unread:
+    post:
+      consumes:
+      - application/json
+      description: Message
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success unread message
+          schema:
+            $ref: '#/definitions/models.MessageResponse'
+        "400":
+          description: invalid url address
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: message not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: GetMessage
+      tags:
+      - messages
+  /message/send:
+    post:
+      consumes:
+      - application/json
+      description: Message
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success send message
+          schema:
+            $ref: '#/definitions/models.MessageResponse'
+        "400":
+          description: no valid emails
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "403":
+          description: invalid form
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: message not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: GetMessage
+      tags:
+      - messages
   /signin:
     post:
       consumes:
@@ -216,9 +358,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: user created
+          description: success sign in
           schema:
-            $ref: '#/definitions/models.SignInResponse'
+            $ref: '#/definitions/models.AuthResponse'
         "401":
           description: wrong password
           schema:
@@ -228,12 +370,12 @@ paths:
           schema:
             $ref: '#/definitions/errors.JSONError'
         "500":
-          description: failed to create session
+          description: internal server error
           schema:
             $ref: '#/definitions/errors.JSONError'
       summary: SignIn
       tags:
-      - users
+      - auth
   /signup:
     post:
       consumes:
@@ -252,9 +394,9 @@ paths:
         "200":
           description: user created
           schema:
-            $ref: '#/definitions/models.SignUpResponse'
+            $ref: '#/definitions/models.AuthResponse'
         "401":
-          description: passwords dont match
+          description: invalid login
           schema:
             $ref: '#/definitions/errors.JSONError'
         "403":
@@ -266,10 +408,186 @@ paths:
           schema:
             $ref: '#/definitions/errors.JSONError'
         "500":
-          description: failed to create session
+          description: internal server error
           schema:
             $ref: '#/definitions/errors.JSONError'
       summary: SignUp
+      tags:
+      - auth
+  /user:
+    delete:
+      consumes:
+      - application/json
+      description: delete user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success delete user
+        "400":
+          description: failed to get user
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: user not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: Delete
+      tags:
+      - users
+  /user/avatar:
+    get:
+      consumes:
+      - application/json
+      description: get user avatar
+      parameters:
+      - description: email
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success get user avatar
+          schema:
+            items:
+              type: integer
+            type: array
+        "400":
+          description: no bucket
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: user not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: GetAvatar
+      tags:
+      - users
+    post:
+      consumes:
+      - application/json
+      description: edit user avatar
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success edit user avatar
+        "400":
+          description: unsupported content type
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "403":
+          description: invalid form
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: user not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: EditAvatar
+      tags:
+      - users
+  /user/info:
+    get:
+      consumes:
+      - application/json
+      description: get info about user
+      parameters:
+      - description: email
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success get user info
+          schema:
+            $ref: '#/definitions/models.UserInfo'
+        "404":
+          description: user not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: GetInfo
+      tags:
+      - users
+    post:
+      consumes:
+      - application/json
+      description: edit info about user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success edit user info
+          schema:
+            $ref: '#/definitions/models.EditUserInfoResponse'
+        "400":
+          description: failed to get user
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "403":
+          description: invalid form
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: user not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: EditInfo
+      tags:
+      - users
+  /user/pw:
+    post:
+      consumes:
+      - application/json
+      description: edit password about user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success edit user password
+        "400":
+          description: failed to get user
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "403":
+          description: invalid form
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "404":
+          description: user not found
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/errors.JSONError'
+      summary: EditPw
       tags:
       - users
 swagger: "2.0"
