# internal/user/delivery/http/handlers.go
@@ -24,6 +24,17 @@ func New(uUC user.UseCaseI) user.HandlersI {
 	}
 }
 
+// Delete godoc
+// @Summary      Delete
+// @Description  delete user
+// @Tags     users
+// @Accept	 application/json
+// @Produce  application/json
+// @Success  200 "success delete user"
+// @Failure 400 {object} errors.JSONError "failed to get user"
+// @Failure 404 {object} errors.JSONError "user not found"
+// @Failure 500 {object} errors.JSONError "internal server error"
+// @Router   /user [delete]
 func (h *handlers) Delete(w http.ResponseWriter, r *http.Request) {
 	userID, ok := r.Context().Value(pkg.ContextUser).(uint64)
 	if !ok {
@@ -38,6 +49,17 @@ func (h *handlers) Delete(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// GetInfo godoc
+// @Summary      GetInfo
+// @Description  get info about user
+// @Tags     users
+// @Accept	 application/json
+// @Produce  application/json
+// @Param id query string true "email"
+// @Success 200 {object} models.UserInfo "success get user info"
+// @Failure 404 {object} errors.JSONError "user not found"
+// @Failure 500 {object} errors.JSONError "internal server error"
+// @Router   /user/info [get]
 func (h *handlers) GetInfo(w http.ResponseWriter, r *http.Request) {
 	email := r.URL.Query().Get(config.RouteUserInfoQueryEmail)
 	u, err := h.userUC.GetByEmail(email)
@@ -54,6 +76,18 @@ func (h *handlers) GetInfo(w http.ResponseWriter, r *http.Request) {
 	pkg.SendJSON(w, r, http.StatusOK, info)
 }
 
+// EditInfo godoc
+// @Summary      EditInfo
+// @Description  edit info about user
+// @Tags     users
+// @Accept	 application/json
+// @Produce  application/json
+// @Success 200 {object} models.EditUserInfoResponse "success edit user info"
+// @Failure 400 {object} errors.JSONError "failed to get user"
+// @Failure 403 {object} errors.JSONError "invalid form"
+// @Failure 404 {object} errors.JSONError "user not found"
+// @Failure 500 {object} errors.JSONError "internal server error"
+// @Router   /user/info [post]
 func (h *handlers) EditInfo(w http.ResponseWriter, r *http.Request) {
 	// тут пока что просто из body - в будущем на form data
 	userID, ok := r.Context().Value(pkg.ContextUser).(uint64)
@@ -82,6 +116,18 @@ func (h *handlers) EditInfo(w http.ResponseWriter, r *http.Request) {
 	pkg.SendJSON(w, r, http.StatusOK, models.EditUserInfoResponse{Email: info.Email})
 }
 
+// EditPw godoc
+// @Summary      EditPw
+// @Description  edit password about user
+// @Tags     users
+// @Accept	 application/json
+// @Produce  application/json
+// @Success 200 "success edit user password"
+// @Failure 400 {object} errors.JSONError "failed to get user"
+// @Failure 403 {object} errors.JSONError "invalid form"
+// @Failure 404 {object} errors.JSONError "user not found"
+// @Failure 500 {object} errors.JSONError "internal server error"
+// @Router   /user/pw [post]
 func (h *handlers) EditPw(w http.ResponseWriter, r *http.Request) {
 	userID, ok := r.Context().Value(pkg.ContextUser).(uint64)
 	if !ok {
@@ -110,6 +156,19 @@ func (h *handlers) EditPw(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// EditAvatar godoc
+// @Summary      EditAvatar
+// @Description  edit user avatar
+// @Tags     users
+// @Accept	 application/json
+// @Produce  application/json
+// @Success 200 "success edit user avatar"
+// @Failure 400 {object} errors.JSONError "failed to get user"
+// @Failure 400 {object} errors.JSONError "unsupported content type"
+// @Failure 403 {object} errors.JSONError "invalid form"
+// @Failure 404 {object} errors.JSONError "user not found"
+// @Failure 500 {object} errors.JSONError "internal server error"
+// @Router   /user/avatar [post]
 func (h *handlers) EditAvatar(w http.ResponseWriter, r *http.Request) {
 	userID, ok := r.Context().Value(pkg.ContextUser).(uint64)
 	if !ok {
@@ -145,6 +204,20 @@ func (h *handlers) EditAvatar(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// GetAvatar godoc
+// @Summary      GetAvatar
+// @Description  get user avatar
+// @Tags     users
+// @Accept	 application/json
+// @Produce  application/json
+// @Param id query string true "email"
+// @Success 200 {object} []byte "success get user avatar"
+// @Failure 400 {object} errors.JSONError "failed get file"
+// @Failure 400 {object} errors.JSONError "no key"
+// @Failure 400 {object} errors.JSONError "no bucket"
+// @Failure 404 {object} errors.JSONError "user not found"
+// @Failure 500 {object} errors.JSONError "internal server error"
+// @Router   /user/avatar [get]
 func (h *handlers) GetAvatar(w http.ResponseWriter, r *http.Request) {
 	email := r.URL.Query().Get(config.RouteUserAvatarQueryEmail)
 	img, err := h.userUC.GetAvatar(email)
